# mrg_slam

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ROS1.cmake  ROS2.cmake  package.xml
apps/: floor_detection_component.cpp  floor_detection_nodelet.cpp  hdl_graph_slam_component.cpp  hdl_graph_slam_linktime_composition.cpp  hdl_graph_slam_manual_composition.cpp  hdl_graph_slam_nodelet.cpp  mrg_relay_component.cpp  mrg_slam_component.cpp  mrg_slam_manual_composition.cpp  multi_robot_communicator.cpp  prefiltering_component.cpp  prefiltering_nodelet.cpp  scan_matching_odometry_component.cpp  scan_matching_odometry_nodelet.cpp
cmake/: ROS1.cmake  ROS2.cmake
config/: hdl_graph_slam_400.yaml  hdl_graph_slam_501.yaml  hdl_multi_robot_graph_slam.yaml  hdl_multi_robot_graph_slam_kitti.yaml  mrg_slam.yaml  mrg_slam_kitti.yaml  mrg_slam_ouster.yaml  mrg_slam_velodyne_VLP16.yaml  nebula_initialization.yaml  nebula_multi_robot_urban.yaml  params.yaml
include/g2o/: edge_se3_ranging.hpp
include/hdl_graph_slam/: edge.hpp  floor_coeffs_processor.hpp  global_id.hpp  gps_processor.hpp  graph_slam.hpp  imu_processor.hpp  information_matrix_calculator.hpp  keyframe.hpp  keyframe_updater.hpp  loop_detector.hpp  map_cloud_generator.hpp  markers_publisher.hpp  nmea_sentence_parser.hpp  registrations.hpp  ros_time_hash.hpp  ros_utils.hpp  sc_loop_detector.hpp
include/mrg_slam/: edge.hpp  floor_coeffs_processor.hpp  gps_processor.hpp  graph_data_base.hpp  graph_database.hpp  graph_slam.hpp  imu_processor.hpp  information_matrix_calculator.hpp  keyframe.hpp  keyframe_updater.hpp  loop_detector.hpp  map_cloud_generator.hpp  markers_publisher.hpp  nmea_sentence_parser.hpp  ranging_processor.hpp  registrations.hpp  ros_utils.hpp
include/pcl/: fill_ground_plane.hpp
include/pcl/filters/: ApproximateMeanVoxelGrid.h  ApproximateMeanVoxelGrid.hpp
include/sc/: Scancontext.h
launch/: hdl_graph_slam.launch  hdl_graph_slam_400.launch  hdl_graph_slam_400.launch.py  hdl_graph_slam_501.launch  hdl_graph_slam_501.launch.py  hdl_graph_slam_imu.launch  hdl_graph_slam_kitti.launch  hdl_multi_robot_graph_slam.launch  hdl_multi_robot_graph_slam.launch.py  hdl_multi_robot_graph_slam_debug.launch.py  mrg_slam.launch.py  mrg_slam.py  mrg_slam_debug.launch.py  static_transform_publisher.py
msg/: EdgeEstimate.msg  EdgeRos.msg  Graph.msg  GraphEstimate.msg  GraphEstimateRos2.msg  GraphRos.msg  GraphRos2.msg  KeyFrame.msg  KeyFrameEstimate.msg  KeyFrameEstimateRos2.msg  KeyFrameRos.msg  KeyFrameRos2.msg  NebulaPoseGraph.msg  PoseWithName.msg  PoseWithNameArray.msg
python_scripts/: clock_publisher_ros2.py  generate_evo_results.sh  kitti_inspector.py  kitti_multirobot_reversed_processor.py  nebula_multirobot_inspector.py  nebula_multirobot_processor.py  odom_to_file.py
rviz/: hdl_graph_slam.rviz  hdl_graph_slam_ros2.rviz  hdl_multi_robot_graph_slam_ros2.rviz  lidar_imu_odometry.rviz  mrg_slam.rviz  mrg_slam_demo_video.rviz  nebula.rviz  nebula_multi_robot_ros2.rviz  visualize_pcl_and_loops.rviz  visualize_pcl_paper.rviz
scripts/: clock_publisher_ros2.py  g2o_to_pose_file.py  generate_evo_results.sh  kitti_inspector.py  kitti_multirobot_processor.py  kitti_multirobot_reversed_processor.py  kitti_singlerobot_processor.py  lidar_imu_odometry.py  map2odom_publisher_ros2.py  nebula_multi_rosbag_processor_sqlite3.py  nebula_multirobot_inspector.py  nebula_multirobot_processor.py  nebula_rosbag_processor.py  nebula_rosbag_processor_sqlite3.py  odom_to_file.py  transform2odom_forwarder.py
src/: ros_utils.cpp
src/hdl_graph_slam/: bag_player.py  edge.cpp  floor_coeffs_processor.cpp  ford2bag.py  global_id.cpp  gps_processor.cpp  graph_msg_transfer.py  graph_slam.cpp  imu_processor.cpp  information_matrix_calculator.cpp  keyframe.cpp  keyframe_updater.cpp  loop_detector.cpp  map2odom_publisher.py  map_cloud_generator.cpp  markers_publisher.cpp  registrations.cpp
src/mrg_slam/: edge.cpp  floor_coeffs_processor.cpp  gps_processor.cpp  graph_data_base.cpp  graph_database.cpp  graph_slam.cpp  imu_processor.cpp  information_matrix_calculator.cpp  keyframe.cpp  keyframe_updater.cpp  loop_detector.cpp  map2odom_publisher.py  map_cloud_generator.cpp  markers_publisher.cpp  ranging_processor.cpp  registrations.cpp
src/pcl/: fill_ground_plane.cpp
srv/: GetGraphEstimate.srv  GetGraphEstimateRos2.srv  GetMap.srv  PublishGraph.srv  SaveMap.srv
